--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,17 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.7.RELEASE")
+    }
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 jar {
     baseName='fornax'
@@ -16,4 +27,6 @@ targetCompatibility = 1.8
 
 dependencies {
 	compile 'org.apache.commons:commons-compress:1.17'
+	compile 'org.springframework.boot:spring-boot-starter'
+	testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
