--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,22 @@ buildscript {
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.7.RELEASE")
     }
+
 }
+
+plugins {
+    id 'com.palantir.docker' version '0.22.1'
+}
+
+group = 'kingstonduo'
+
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'com.palantir.docker'
 
 jar {
     baseName='fornax'
@@ -29,4 +38,18 @@ dependencies {
 	compile 'org.apache.commons:commons-compress:1.17'
 	compile 'org.springframework.boot:spring-boot-starter'
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
+}
+
+
+task unpack(type: Copy) {
+    dependsOn bootJar
+    println tasks.bootJar.outputs.files.singleFile
+    from(zipTree(tasks.bootJar.outputs.files.singleFile))
+    into("build/dependency")
+}
+
+docker {
+    name "${project.group}/${bootJar.baseName}"
+    copySpec.from(tasks.unpack.outputs).into("dependency")
+    buildArgs(['DEPENDENCY': "dependency"])
 }
